test/files/pos/t8209a/Test_2.scala
object Test extends App {
  val a: A = Macros.foo
  val b: B = Macros.foo
}