test/files/neg/t6931/Test_2.scala
object Test extends App {
  import Macros._
  err"123"
}